--- a/assets/index.css
+++ b/assets/index.css
@@ -6,8 +6,13 @@
 
 header {
   display: flex;
-  height: 100px;
-  width: 100%;
+  padding: 0px  20px;
+  flex-direction: column;
+  z-index:1000;
+  position: sticky;
+  top:0;
+  background-color: white;
+
 }
 
 body {
@@ -23,16 +28,19 @@ body {
   flex-direction: row;
   align-items: center;
   margin-left: 10px;
-  
+  justify-content: space-between;
 }
 
+
 .page-title {
-  align-self: center;
+  
   font-size: 30px;
+  
 }
 
 .menu{
  margin-left: auto;
+
 }
 
 .menu img {
@@ -168,7 +176,7 @@ body {
   border-radius: 50%;
   width: 80px;
   height: 80px;
-  left: 15%;
+  left: 10%;
   bottom:-5%;
   border: 5px solid #d54d23;
   background-color: #d54d23;
@@ -218,12 +226,16 @@ body {
 .cl-2-links h2 {
   margin-bottom: 10px;
 }
-
 .hl {
   border-top: 1px solid rgb(205, 205, 205);
   width: auto;
 }
 
+.cl-3-hl{
+  width:90%;
+  border-top: 1px solid rgb(205, 205, 205);
+  
+}
 .cl-3 {
   display: flex;
   flex-direction: column;
@@ -246,11 +258,10 @@ body {
 }
 
 .grid-3-s{
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
-  border: solid 1px rgb(205, 205, 205);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
   width:80%;
   align-items: center;
-  border-radius:  15px;
+  border-radius:20px;
 }
 
 /*section-4*/
@@ -276,8 +287,12 @@ body {
   left: 50%;
   top: 10%;
   width: 70%;
-  transform: translateX(-50%);
-  font-size: 30px;
+  transform: translate(-50%);
+  
+}
+
+.banner-text-s h1{
+  font-size: 50px;
 }
 
 .banner-2-s {
@@ -312,27 +327,33 @@ body {
   display: flex;
 }
 .dot {
-  height: 40px;
-  width: 40px;
+  height: 50px;
+  width: 50px;
   background-color: #d54d23;
   border-radius: 50%;
   display: block;
   position: absolute;
-  top:-5%;
+  top:-20%;
   right: -5%;
 }
 
+.rw-5{
+  display: flex;
+  flex-direction: column;
+  gap:40px;
+}
 .rw-5-cl-1-s {
   height: 80px;
   display: flex;
   flex-direction: row;
-  margin: 40px;
+  padding: 10px 50px;;
   justify-content: space-between;
   background-color: rgb(255, 238, 233);
   align-items: center;
   border-radius: 5%;
   width: 100%;
   position: relative;
+  gap:20%;
 }
 
 /*section-6*/
@@ -341,7 +362,11 @@ body {
   flex-direction: column;
   margin: 20px;
 }
-.sub-heading-s b {
+
+.sec-6-col-1{
+  text-align: center;
+}
+.sub-heading-s  {
   justify-self: center;
   align-self: center;
 }
@@ -376,6 +401,9 @@ body {
 .extra-info-s {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 50px
 }
 
 .r-7-cl-1 {
@@ -388,19 +416,22 @@ body {
   padding: 50px;
   width: 80%;
   justify-content: center;
-  margin-left: 40px;
-  margin-bottom: 40px;
 }
 
 .sec-7-col-1-row {
   display: flex;
   flex-direction: row;
-  gap: 50px;
+  gap: 50%;
+  align-items: end;
 }
 .r-7-cl-1 p {
   color: grey;
 }
 
+.r-7-cl-2-s{
+  width:80%;
+
+}
 .r-7-cl-2-s img {
   width: calc(100% - 20px);
   height: 100%;
@@ -412,7 +443,7 @@ body {
   flex-direction: column;
   justify-content: center;
   gap: 20px;
-  margin: 20px;
+  width:80%;
 }
 
 .r-7-cl-3 p {
@@ -426,6 +457,13 @@ body {
 }
 
 /*section-8*/
+
+.section-8{
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .cont-9-row-1-s {
   display: flex;
   flex-direction: column;
@@ -436,8 +474,14 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: center;
   margin: 20px;
+}
+
+.container-9{
+  width:90%;
+  display: flex;
+  flex-direction: column ;
+  align-items: center;
 }
 
 .box {
@@ -445,6 +489,7 @@ body {
   width: 80%;
   margin-top: 30px;
   align-items: center;
+  padding: 20px;
 }
 
 .box-image {
@@ -456,14 +501,7 @@ body {
   border-radius: 5%;
   width: 100%;
 }
-.cont-9-det-1 {
-  display: flex;
-  flex-direction: row;
-  gap: 70px;
-  align-items: center;
-  justify-content: center;
-  margin-top: 30px;
-}
+
 
 .box-head {
   background-color: rgb(251, 217, 207);
@@ -583,6 +621,7 @@ body {
   left:50%;
   top:40%;
   transform: translate(-50%);
+  width:70%;
 
 }
 .container-10-s {
@@ -590,6 +629,7 @@ body {
   flex-direction: column;
   margin-top: 20px;
   gap: 50px;
+  justify-content: center;
 
  
 }
@@ -598,10 +638,31 @@ body {
   display: none;
 }
 
+.map2{
+  display: none;
+}
+
+.cont-10-col-1-rw-1{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cont-10-col-1-rw-2{
+  display: flex;
+  flex-direction: column;
+  gap:40px;
+}
+
+.cont-10-col-1{
+  display: flex;
+  flex-direction: column;
+  gap:20px;
+}
+
 .cont-10-box {
   display: flex;
   flex-direction: row;
-  width: 300px;
+  width:100%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 15px;
   height: 60px;
@@ -621,7 +682,7 @@ body {
 
 .box-11-s {
   background-color: rgb(250, 250, 250);
-  width: 300px;
+  width: 100%;
   border-radius: 15px;
   border: black 1px solid;
   margin-top: 50px;
@@ -671,7 +732,7 @@ body {
 .section-11 {
   padding-top: 60vh;
   overflow-x: hidden;
-  display: block;
+
 }
 
 .container-11 {
@@ -680,9 +741,8 @@ body {
   height: 20vh;
   background-color: black;
   color: antiquewhite;
-  align-items: center;
-  justify-items: center;
-  display: flex;
+  text-align: center;
+  padding: 5%;
 }
 
 /*tablet-view*/
@@ -691,22 +751,24 @@ body {
 
 
 
+  header{
+    margin: 0px;
+  }
   /*section-1*/
 
   .head2-l {
     display: flex;
-    gap: 20px;
+    gap: 6%;
   }
   .menu {
     display: none;
   }
 
   .navbar {
-    margin-top: 45px;
+   
     flex-direction: row;
     display: flex;
     margin-right: 100px;
-    margin-bottom: 40px;
     gap: 1px;
     white-space: nowrap;
   }
@@ -746,10 +808,11 @@ body {
   }
 
   .calender-circle a {
-    padding: 0;
+    padding:0px;
     color: white;
     margin-top: 10px;
     margin-left: 5px;
+    text-decoration-line: none;
   }
 
   .calender-circle svg {
@@ -762,6 +825,116 @@ body {
 
   /*section-2*/
 
+
+  .slider-images-m img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+
+  /*section-3*/
+
+  .main-image-m{
+    width:80vw;
+    height: auto;
+  }
+
+  .main-image-m img{
+    object-fit:cover;
+    width:100%;
+    height:100%;
+  }
+
+  .image-container{
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    bottom: -5%;
+    left:-5%;
+  }
+
+  .grid-2-m{
+    margin: 80px 10%;
+  }
+
+  .hl {
+    border-top: 1px solid rgb(205, 205, 205);
+    width: auto;
+  }
+
+
+  /*section-4*/
+
+ .section-4{
+  margin-top:80px;
+ }
+ 
+ .banner-m{
+  height: 80%;
+ }
+
+ .banner-2-m{
+  height:50%;
+  left:5%;
+ }
+ .banner-text-m {
+  left:50%;
+  white-space: normal;
+  text-align: center;
+ }
+
+
+ .play-button-m{
+  left:45%;
+ }
+
+ /*section-6*/
+
+ .best-deal{
+  display: flex;
+  flex-direction: column;
+  margin: 10%;
+  align-items: center;
+  justify-content: center;
+ }
+
+ .sec-6-col-1{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+ }
+
+ .sec-6-col-2 button:hover{
+  
+  background-color: #d54d23;
+  cursor: pointer;
+
+ }
+
+ /*section-8*/
+
+
+ .container-9{
+  display:grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-template-rows: repeat(3);
+ }
+
+ .map1{
+  display:none;
+ }
+ 
+ .map2{
+  display: flex;
+ }
+ .map2 iframe{
+  border-radius: 15px;
+ }
+ .banner-3-m{
+  height:80%;
+ }
+
 }
 
 /*desktop-view*/
@@ -772,6 +945,7 @@ body {
     flex-direction: column;
     overflow-y: auto;
     height: 200px;
+    padding: 0px;
   }
 
   .head1 {
@@ -783,8 +957,13 @@ body {
     display: flex;
     flex-direction: row;
     background-color: white;
-    height: 120px;
-    margin: none;
+    height: 100px;
+    margin: 0px;
+  }
+
+  .page-title h3{
+    padding-right: 20px;
+    padding-bottom: 20px;
   }
 
   .menu {
@@ -887,7 +1066,6 @@ body {
     font-size: 15px;
     font-weight: 600;
     padding: 50px 20px;
-    margin-top: 30px;
   }
 
   .navbar a:hover {
@@ -917,11 +1095,11 @@ body {
     max-width: 20%;
     color: aliceblue;
   }
-}
+
 
 /*section-2*/
 
-@media only screen and (min-width: 992px) {
+
   .slider-warapper {
     position: auto;
     max-width: 100vw;
@@ -1037,7 +1215,7 @@ body {
   .container-3 {
     display: flex;
     flex-direction: row;
-    padding: 120px 100px;
+    padding: 120px 90px;
   }
 
   .sub-heading {
@@ -1052,7 +1230,6 @@ body {
 
   .grid-1 {
     position: relative;
-    overflow: hidden;
     width: 40%;
   }
 
@@ -1061,12 +1238,14 @@ body {
     display: flex;
     object-fit: contain;
     max-height: 90%;
+    width:80%;
+    height: auto;
   }
 
   .image-container {
     border-radius: 50%;
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     overflow: hidden;
     position: absolute;
     left: 5%;
@@ -1091,12 +1270,14 @@ body {
   .grid-2 {
     width: 40%;
     flex-direction: column;
+    margin:2%;
   }
 
   .main-title {
     font-family: poppins, sans-serif;
-    font-size: 25px;
+    font-size: 20px;
     margin-top: 30px;
+    
   }
   .cl-2-links {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -1141,13 +1322,14 @@ body {
 
   .banner-text {
     position: absolute;
-    top: 20%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
   }
   .banner img {
     width: 100%;
     height: 100%;
+    object-fit: fill ;
   }
 
   .banner-2 {
@@ -1155,7 +1337,7 @@ body {
     top: 80%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 90%;
+    height: 50%;
     width: 70%;
   }
 
@@ -1192,11 +1374,11 @@ body {
     font-size: 40px;
   }
   .rw-5-cl-1 {
-    width: 33.33%;
-    height: 80px;
+    width: 300px;
+    height: 100px;
     display: flex;
     flex-direction: row;
-    margin: 40px;
+    
     justify-content: space-between;
     background-color: rgb(255, 238, 233);
     align-items: center;
@@ -1205,37 +1387,48 @@ body {
   }
 
   .dot {
-    height: 35px;
-    width: 35px;
+    height: 50px;
+    width: 50px;
     background-color: #d54d23;
     border-radius: 50%;
     display: block;
   }
 
   /* section-6 */
+
+  .section-6{
+    margin:0px;
+  }
   .best-deal {
     display: flex;
     flex-direction: row;
-    padding: 50px 100px;
+    padding: 50px 80px;
     justify-content: space-between;
+    margin: 0px;
+    gap:30%;
   }
 
   .sec-6-col-1 {
     display: flex;
     flex-direction: column;
+    width:30%;
+    align-items: flex-start;
+    padding-left: 5%;
+    text-align: left;
   }
 
   .sec-6-col-2 {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    width: 30vw;
+    width: 60%;
+    flex-wrap: nowrap;
+
   }
 
   .sec-6-col-2 button {
-    width: 120px;
+    width: 150px;
     height: 50px;
-    background-color: dimgray;
+    background-color: black;
     color: aliceblue;
     border-radius: 12px;
     font-family: "Roboto", sans-serif;
@@ -1255,7 +1448,6 @@ body {
     display: flex;
     flex-direction: row;
     height: 70vh;
-
     gap: 50px;
     padding-left: 50px;
     padding-right: 50px;
@@ -1264,12 +1456,13 @@ body {
   .r-7-cl-1 {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 20px;
     margin-left: 80px;
     border-radius: 2%;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
     border: solid 1px rgb(205, 205, 205);
-    padding: 50px;
+    padding: 20px;
+    width:40%;
   }
 
   .sec-7-col-1-row {
@@ -1286,6 +1479,10 @@ body {
     height: 100%;
   }
 
+
+  .r-7-cl-3{
+    width:50%;
+  }
   .r-7-cl-3 p {
     font-family: "Open Sans", system-ui;
     font-optical-sizing: auto;
@@ -1296,34 +1493,32 @@ body {
   }
 
   /* section-8 */
+
+  .section-8{
+    margin-top: 10%;
+  }
   .container-8 {
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 100px;
+    
   }
 
   .section-8-heading {
-    position: absolute;
     display: flex;
     flex-direction: column;
     padding-top: 50px;
+    text-align: center;
+    
   }
   .container-9 {
-    display: flex;
-    flex-direction: column;
-    padding: 20vh;
+    display:grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(2);
+    padding:0px 20vh;
     align-items: center;
     justify-content: center;
-  }
-
-  .cont-9-row-1 {
-    display: flex;
-    flex-direction: row;
-    gap: 30px;
-    justify-content: center;
-    align-items: center;
   }
 
   .box {
@@ -1422,28 +1617,51 @@ body {
   }
 
   /* section-9 */
-  .section-9 {
+  .section-9{
     position: relative;
+  }
+
+  .section-9-2-s{
+    display: flex;
+    position: absolute;
   }
   .container-10 {
     display: flex;
-    position: absolute;
-    top: 50vh;
-    left: 80px;
+    
     flex-direction: row;
-    gap: 150px;
+    gap:15%;
   }
   .section-9 {
     padding-top: 50px;
   }
 
-  .banner-img {
-    filter: blur(5px);
+  .cont-10-col-1{
+    width: 50%;
   }
+
+  .cont-10-col-2{
+    width:50%;
+  }
+  .banner-3{
+   width:100%;
+  }
+
+  .banner-3 img{
+   width:100%;
+   object-fit: cover;
+  }
+
+  .banner-text-3{
+    left:50%;
+    transform: translateX(-50%);
+    text-align: center;
+  }
+
 
   .cont-10-col-1 {
     display: flex;
     flex-direction: column;
+    padding-top: 5%;
   }
 
   .map {
@@ -1451,7 +1669,7 @@ body {
   }
 
   .map img {
-    max-width: 100%;
+    width: 100%;
   }
 
   .cont-10-col-1-rw-2 {
@@ -1524,7 +1742,7 @@ body {
   /* section-10 */
 
   .section-11 {
-    padding-top: 60vh;
+    padding-top: 0px;
     overflow-x: hidden;
   }
 
