--- a/index.css
+++ b/index.css
@@ -27,15 +27,13 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-left: 10px;
+  margin:20px 0px 20px 0px ;
   justify-content: space-between;
 }
 
 
-.page-title {
-  
-  font-size: 30px;
-  
+.page-title-s {
+  font-size: 25px;
 }
 
 .menu{
@@ -44,8 +42,8 @@ body {
 }
 
 .menu img {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
 }
 .navbar {
   display: none;
@@ -54,8 +52,9 @@ body {
 /*section-2*/
 .container-s {
   width: auto;
-  height: 1000px;
+  height: 800px;
   display: flex;
+  position: relative;
 }
 .slide-images-s {
   width: auto;
@@ -69,12 +68,10 @@ body {
 .slider-nav {
   display: flex;
   position: absolute;
-  bottom: 1.25rem;
-  top: 1050px;
-  left: 50%;
+  bottom:-0.1rem;
+  left: 30%;
   transform: translateX(-50%);
-
-  gap: 2px;
+  gap: 4px;
 }
 
 /*button bana rahe*/
@@ -108,34 +105,36 @@ body {
 }
 
 .arrow-left {
-  top: 80%;
+  top: 50%;
   left: 5%;
 }
 
 .arrow-right {
-  top: 80%;
+  top: 50%;
   right: 5%;
 }
 
+.slider-text{
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top:20%;
+  left:20%;
+  gap:50px;
+}
 .section-2-text-s {
   display: flex;
   flex-direction: row;
   font-size: medium;
   color: black;
-  position: absolute;
-  justify-content: center;
   width: 120px;
-  top: 50%;
-  left: 50%; /* Positioning text horizontally */
-  transform: translate(-50%, -50%); /* Center the text */
   background: white;
+  padding: 5px 1px;
   font-weight: 800;
+  text-align: center;
 }
 
-.overlay-text-s {
-  position: absolute;
-  top: 60%;
-  left: 20%;
+.overlay-text-s { 
   color: aliceblue;
   font-size: 50px;
   font-family: "Open Sans", system-ui;
@@ -148,42 +147,40 @@ body {
   display: flex;
   flex-direction: column;
   margin: 30px;
-  justify-content: center;
-  align-items: center;
 }
 .grid-1-s {
-  width: 500px;
-  position: relative;
-  align-self: center;
   display: flex;
-  justify-content: center;
+  
 
 }
 
-.main-image {
+.main-image-s {
   display: flex;
-  object-fit: contain;
-  max-height: 90%;
-
-  
+  position: relative;
+  box-sizing: border-box;
+  width:calc(100% - 20%);
+  height: 100%;
+  margin-left: 10%;
 }
 
 .main-image img {
   object-fit: contain;
+  width: 100%;
 }
 
 .image-container {
   border-radius: 50%;
   width: 80px;
   height: 80px;
-  left: 10%;
+  left: -5%;
   bottom:-5%;
   border: 5px solid #d54d23;
   background-color: #d54d23;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1%;
 }
 
 .image-container:hover {
@@ -202,7 +199,7 @@ body {
 }
 
 .grid-2-s {
-  margin: 20px;
+  margin: 10%;
   margin-top: 50px;
   margin-bottom: 40px;
 }
@@ -226,20 +223,18 @@ body {
 .cl-2-links h2 {
   margin-bottom: 10px;
 }
-.hl {
-  border-top: 1px solid rgb(205, 205, 205);
-  width: auto;
-}
+
 
 .cl-3-hl{
   width:90%;
   border-top: 1px solid rgb(205, 205, 205);
+  align-self: center;
   
 }
 .cl-3 {
   display: flex;
   flex-direction: column;
-  align-items: center;
+
 }
 
 .cl-3 h3 {
@@ -254,18 +249,24 @@ body {
 
 .grid-3-content {
   margin-left: 20px;
-  gap: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .grid-3-s{
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
-  width:80%;
-  align-items: center;
+  box-shadow: 0 0 50px 1px rgba(0, 0, 0, 0.1 );
+  width:100%;
+  align-self: center;
   border-radius:20px;
+  max-width: 516px;
 }
 
 /*section-4*/
 
+.section-4{
+  margin-top: 100px ;
+}
 .container-4-s {
   height: 800px;
   width: auto;
@@ -325,6 +326,7 @@ body {
 .section-5{
   justify-content: center;
   display: flex;
+  margin:10% 0%;
 }
 .dot {
   height: 50px;
@@ -360,7 +362,8 @@ body {
 .section-6-s {
   display: flex;
   flex-direction: column;
-  margin: 20px;
+  padding: 100px 10%;
+  background-color: rgb(250, 250, 250);
 }
 
 .sec-6-col-1{
@@ -398,6 +401,10 @@ body {
   background-color: #d54d23;
 }
 
+.section-7{
+  background-color: rgb(250, 250, 250);
+  padding-bottom: 100px;
+}
 .extra-info-s {
   display: flex;
   flex-direction: column;
@@ -413,16 +420,15 @@ body {
   border-radius: 2%;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
   border: solid 1px rgb(205, 205, 205);
-  padding: 50px;
+  padding: 5%;
   width: 80%;
   justify-content: center;
 }
 
-.sec-7-col-1-row {
+.sec-7-col-1-row-s {
   display: flex;
   flex-direction: row;
-  gap: 50%;
-  align-items: end;
+  justify-content: space-between;
 }
 .r-7-cl-1 p {
   color: grey;
@@ -456,6 +462,12 @@ body {
   text-align: justify;
 }
 /*section-7*/
+
+.hl {
+  border-top: 1px solid rgb(205, 205, 205);
+  width: auto;
+}
+
 .calender-circle {
   border-radius: 30px;
   width: 180px;
@@ -470,18 +482,23 @@ body {
 
 .calender-circle a {
   padding-top:10px;
-  color: white;
+  color: white !important;
   margin-top: 10px;
   margin-left: 5px;
   text-decoration-line: none;
+  padding: 0px !important;
 }
 
-.calender-circle svg {
+.calender-image{
   background-color: #d54d23;
   border-radius: 50%;
-  max-height: 80%;
-  max-width: 20%;
+  width: 40px;
+  height: 40px;
+
+}
+.calender-image svg {
   color: aliceblue;
+  padding: 10px;
 }
 /*section-8*/
 
@@ -490,6 +507,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 100px 0px;
 }
 .cont-9-row-1-s {
   display: flex;
@@ -503,6 +521,7 @@ body {
   justify-content: center;
   margin: 20px;
 }
+
 
 .container-9{
   width:90%;
@@ -563,6 +582,13 @@ body {
   font-style: normal;
 }
 
+.cont-9-det-1{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0px 15px;
+}
 .cont-9-det-2 {
   font-weight: 800;
   padding-top: 10px;
@@ -571,6 +597,9 @@ body {
   padding-left: 20px;
 }
 
+.box-head{
+  white-space: nowrap;
+}
 .cont-9-det-3 {
   padding: 20px;
   display: flex;
@@ -648,25 +677,34 @@ body {
   left:50%;
   top:40%;
   transform: translate(-50%);
-  width:70%;
+  width:90%;
+  justify-content: center;
+  align-items: center;
 
 }
 .container-10-s {
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
+  margin-top: 10%;
   gap: 50px;
   justify-content: center;
+  width:90%;
 
  
 }
 
-.map {
+.map1 {
+  display: none;
+}
+
+.map{
   display: none;
 }
 
 .map2{
-  display: none;
+  width: 100%;
+  object-fit: contain ;
+  overflow: hidden;
 }
 
 .cont-10-col-1-rw-1{
@@ -677,13 +715,18 @@ body {
 .cont-10-col-1-rw-2{
   display: flex;
   flex-direction: column;
-  gap:40px;
+  gap:20px;
 }
 
 .cont-10-col-1{
   display: flex;
   flex-direction: column;
   gap:20px;
+}
+
+.contact-info{
+  font-weight: 700;
+  font-size: 18px;
 }
 
 .cont-10-box {
@@ -708,12 +751,12 @@ body {
 }
 
 .box-11-s {
-  background-color: rgb(250, 250, 250);
+  background-color:white;
   width: 100%;
   border-radius: 15px;
-  border: black 1px solid;
   margin-top: 50px;
   align-self: center;
+  box-shadow: 0 0 50px 1px rgba(0, 0, 0, 0.1 );
 }
 
 .box-11-content {
@@ -729,14 +772,26 @@ body {
   font-size: 20px;
 }
 
-.box-11-content textarea {
+textarea {
   border-radius: 15px;
   text-align: center;
   font-weight: 300;
+  padding: 6%;
+  text-align: left;
+  vertical-align: top;
+  font-size: 15px;
 }
-
+.form-text{
+  padding: 10px;
+  border-radius: 15px;
+  border: none;
+  background-color: rgb(250, 250, 250);
+}
 .message-textarea {
   height: 150px;
+  background-color: rgb(250, 250, 250);
+  border: none;
+  border-radius: 15px;
 }
 
 .box-11-content button {
@@ -757,6 +812,7 @@ body {
 /*section-10*/
 
 .section-11 {
+  margin-top: 25%;
   padding-top: 60vh;
   overflow-x: hidden;
 
@@ -786,7 +842,9 @@ body {
   .head2-l {
     display: flex;
     gap: 6%;
+    margin: 0px;
   }
+
   .menu {
     display: none;
   }
@@ -822,33 +880,6 @@ body {
     
   }
 
-  .calender-circle {
-    border-radius: 30px;
-    width: 180px;
-    height: 40px;
-    background-color: black;
-    display: flex;
-    flex-direction: row;
-    align-self: center;
-    margin-top: 40px;
-   
-  }
-
-  .calender-circle a {
-    padding:10px;
-    color: white;
-    margin-top: 10px;
-    margin-left: 5px;
-    text-decoration-line: none;
-  }
-
-  .calender-circle svg {
-    background-color: #d54d23;
-    border-radius: 50%;
-    max-height: 80%;
-    max-width: 20%;
-    color: aliceblue;
-  }
 
   /*section-2*/
 
@@ -889,6 +920,15 @@ body {
     width: auto;
   }
 
+  .grid-3-m{
+    width:100%;
+    max-width: 696px;
+    border-radius: 20px;
+    box-shadow: 0 0 50px 1px rgba(0, 0, 0, 0.1);
+    align-self: center;
+  }
+
+
 
   /*section-4*/
 
@@ -903,6 +943,7 @@ body {
  .banner-2-m{
   height:50%;
   left:5%;
+  top:50%;
  }
  .banner-text-m {
   left:50%;
@@ -912,7 +953,8 @@ body {
 
 
  .play-button-m{
-  left:45%;
+  left:50%;
+  transform: translateX(-50%);
  }
 
  /*section-6*/
@@ -945,21 +987,32 @@ body {
  .container-9{
   display:grid;
   grid-template-columns: repeat(2,1fr);
-  grid-template-rows: repeat(3);
+  grid-template-rows: auto;
  }
 
- .map1{
+ .map2{
   display:none;
  }
  
- .map2{
-  display: flex;
- }
- .map2 iframe{
+ .map{
+  display: block;
   border-radius: 15px;
+  object-fit: contain;
+  overflow: hidden;
+ }
+ .map2{
+  display: none;
  }
  .banner-3-m{
   height:80%;
+ }
+ 
+ .box-head{
+  min-width: fit-content;
+ }
+
+ .section-11{
+  margin-top: 15%;
  }
 
 }
@@ -970,14 +1023,15 @@ body {
   header {
     display: flex;
     flex-direction: column;
-    overflow-y: auto;
-    height: 200px;
+    overflow-y: hidden;
     padding: 0px;
   }
 
   .head1 {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    height: 50px;
   }
 
   .head2 {
@@ -986,12 +1040,9 @@ body {
     background-color: white;
     height: 100px;
     margin: 0px;
+    align-items: center;
   }
 
-  .page-title h3{
-    padding-right: 20px;
-    padding-bottom: 20px;
-  }
 
   .menu {
     display: none;
@@ -1000,9 +1051,9 @@ body {
     display: flex;
     color: darkgray;
     flex-direction: row;
-    margin-right: 50px;
-    padding-left: 60px;
-    gap: 30px;
+    padding-left: 10%;
+    gap:5%;
+    align-items: center;
   }
 
   .icons {
@@ -1010,7 +1061,8 @@ body {
     width: 30px;
     background-color: rgb(205, 205, 205);
     border-radius: 50%;
-    gap: 5px;
+    justify-content: center;
+    align-items: center;
     margin: 5px;
     display: flex;
   }
@@ -1021,7 +1073,7 @@ body {
   }
 
   .vl {
-    height: 40px;
+    height: 30px;
     margin-top: 10px;
     border-left: 1px solid rgb(205, 205, 205);
     margin-bottom: 10px;
@@ -1029,9 +1081,8 @@ body {
 
   .header-image {
     align-items: center;
-    margin-top: 15px;
-
     font-size: 20px;
+    padding-right: 5px;
   }
 
   .header-image:hover {
@@ -1041,9 +1092,8 @@ body {
   .cont2 {
     display: flex;
     flex-direction: row;
-    margin-left: auto;
-    margin-right: 100px;
     align-self: center;
+    padding-right: 5%;
   }
 
   .hl {
@@ -1052,11 +1102,6 @@ body {
   }
 
   .social-icons {
-    justify-self: center;
-    align-self: center;
-    font-size: 20px;
-    margin-left: 5px;
-
     color: white;
   }
 
@@ -1067,13 +1112,13 @@ body {
 
   .navbar {
     margin-left: auto;
+    gap: 0px;
   }
 
   .page-title {
-    margin-left: 60px;
+    padding-left: 10%;
     font-size: 30px;
     text-align: left;
-    margin-top: 30px;
   }
 
   /*navbar*/
@@ -1081,9 +1126,8 @@ body {
     margin-top: 45px;
     flex-direction: row;
     display: flex;
-    margin-right: 50px;
+    margin-right: 5%;
     margin-bottom: 40px;
-    gap: 30px;
   }
 
   .navbar a {
@@ -1099,44 +1143,21 @@ body {
     color: #ed6226;
   }
 
-  .calender-circle {
-    border-radius: 30px;
-    width: 180px;
-    height: 40px;
-    background-color: black;
-    display: flex;
-    flex-direction: row;
-  }
-
-  .calender-circle a {
-    padding: 10px;
-    color: white;
-    margin-top: 10px;
-    margin-left: 5px;
-  }
-
-  .calender-circle svg {
-    background-color: #d54d23;
-    border-radius: 50%;
-    max-height: 100%;
-    max-width: 20%;
-    color: aliceblue;
-  }
-
 
 /*section-2*/
+  .container{
+    width:100%;
+  }
 
-
-  .slider-warapper {
+  .slider-wrapper {
     position: auto;
-    max-width: 100vw;
+    width: 100vw;
     height: 100vh;
   }
 
   .slider {
     display: flex;
     overflow-x: auto;
-    aspect-ratio: 16/9;
     position: relative;
   }
 
@@ -1147,12 +1168,11 @@ body {
   .slide-images {
     width: 100%;
     display: flex;
-    flex: 1 0 100%;
+
   }
 
-  .slide-images img {
-    flex: 1 0 100%;
-    scroll-snap-align: start;
+  .slider img{
+    width: 100%;
   }
 
   .slider-nav {
@@ -1183,10 +1203,10 @@ body {
     font-size: medium;
     color: black;
     position: absolute;
-    top: 50%;
-    left: 50%; /* Positioning text horizontally */
+    top: 40%;
+    left: 35%; /* Positioning text horizontally */
     transform: translate(-50%, -50%); /* Center the text */
-    background: rgba(0, 0, 0, 0.5);
+    justify-content: space-between;
   }
 
   .arrows {
@@ -1204,35 +1224,28 @@ body {
     cursor: pointer;
   }
   .arrow-left {
-    top: 80%;
+    top: 50%;
     left: 5%;
   }
 
   .arrow-right {
-    top: 80%;
+    top: 50%;
     right: 5%;
   }
 
   .section-2-text {
     background-color: white;
     height: 50px;
-    width: 150px;
-    position: absolute;
-    top: 50%;
-    left: 20%;
+    width: 120px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-items: center;
     font-weight: 600;
-    padding-left: 20px;
   }
 
   .overlay-text {
-    position: absolute;
-    top: 60%;
-    left: 20%;
-    color: aliceblue;
+    color: white;
     font-size: 50px;
     font-family: "Open Sans", system-ui;
     font-weight: 800;
@@ -1256,7 +1269,6 @@ body {
   }
 
   .grid-1 {
-    position: relative;
     width: 40%;
   }
 
@@ -1274,9 +1286,8 @@ body {
     width: 100px;
     height: 100px;
     overflow: hidden;
-    position: absolute;
-    left: 5%;
-    top: 80%;
+    top:90%;
+    left:-10%;
     border: 5px solid #d54d23;
     background-color: #d54d23;
     display: flex;
@@ -1361,7 +1372,7 @@ body {
 
   .banner-2 {
     position: absolute;
-    top: 80%;
+    top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
     height: 50%;
@@ -1429,7 +1440,7 @@ body {
   .best-deal {
     display: flex;
     flex-direction: row;
-    padding: 50px 80px;
+    padding: 5% 5%;
     justify-content: space-between;
     margin: 0px;
     gap:30%;
@@ -1483,19 +1494,21 @@ body {
   .r-7-cl-1 {
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    margin-left: 80px;
+    justify-content: space-between;
+    margin-left: 5%;
     border-radius: 2%;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
     border: solid 1px rgb(205, 205, 205);
-    padding: 20px;
     width:40%;
+    min-width: 203px;
+    padding: 2%;
   }
 
   .sec-7-col-1-row {
     display: flex;
     flex-direction: row;
-    gap: 50px;
+    justify-content: space-between;
+    max-width: 100%;
   }
   .r-7-cl-1 p {
     color: grey;
@@ -1542,30 +1555,26 @@ body {
   .container-9 {
     display:grid;
     grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(2);
-    padding:0px 20vh;
+    grid-template-rows: auto;
+    padding:0px 5%;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    gap: 1%;
+    
+  }
+  .box{
+    width: 100%;
+    margin: 0px 20px;
   }
 
-  .box {
-    background-color: rgb(250, 250, 250);
-    width: 60vh;
-    padding: 40px 20px;
-  }
-
-  .box-image {
-    margin-left: 20px;
-    margin-top: 20px;
-    border-radius: 10%;
-  }
   .box-image img {
     border-radius: 5%;
   }
   .cont-9-det-1 {
     display: flex;
     flex-direction: row;
-    gap: 20vh;
+    justify-content: space-between;
     margin-left: 20px;
     margin-top: 20px;
   }
@@ -1636,7 +1645,7 @@ body {
     height: 40px;
     border-radius: 20px;
     border: none;
-    margin-left: 100px;
+    
   }
 
   .box-button:hover {
@@ -1689,40 +1698,44 @@ body {
     display: flex;
     flex-direction: column;
     padding-top: 5%;
+    align-items: center;
   }
-
-  .map {
-    width: 800px;
-  }
-
-  .map img {
+  
+  .cont-10-col-1-rw-1{
     width: 100%;
+    display: flex;
   }
+
 
   .cont-10-col-1-rw-2 {
     display: flex;
     flex-direction: row;
-    padding: 20px;
-    gap: 150px;
+    justify-content: space-between;
+    width: 100%;
+    
   }
 
   .cont-10-box {
     display: flex;
     flex-direction: row;
-    width: 300px;
+    width: 50%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     border-radius: 15px;
     height: 60px;
     align-items: center;
-    padding: 50px 30px;
-    gap: 30px;
+    gap:8%;
+    padding: 8% 3%;
   }
 
   .cont-10-box img {
     width: 40px;
     height: 40px;
+    align-self: center;
   }
 
+  .cont-10-box-2 img{
+   width:45px;
+  }
   .box-11 {
     background-color: rgb(250, 250, 250);
     width: 400px;
@@ -1741,15 +1754,7 @@ body {
     font-size: 20px;
   }
 
-  .box-11-content textarea {
-    border-radius: 15px;
-    text-align: center;
-    font-weight: 300;
-  }
-
-  .message-textarea {
-    height: 150px;
-  }
+  
 
   .box-11-content button {
     background-color: black;
@@ -1771,6 +1776,7 @@ body {
   .section-11 {
     padding-top: 0px;
     overflow-x: hidden;
+    margin-top: 0px;
   }
 
   .container-11 {
